syntax = "proto3";

package ping;

option go_package = "github.com/charizardbellako/ping/pb";

service PingService {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}
